--- a/SimanStyle.css
+++ b/SimanStyle.css
@@ -37,3 +37,11 @@ body {
     height: auto;
     margin-right: 10px ;
 }
+.Departamentos {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    gap: 10px;
+    background-color: gainsboro;
+    text-decoration: none;
+}
