--- a/SimanStyle.css
+++ b/SimanStyle.css
@@ -19,7 +19,7 @@ body {
 }
 
 .promo-boton:hover {
-  background-color: #c91515;
+    background-color: #c91515;
 }
 
 .Barra-busqueda {
@@ -35,13 +35,31 @@ body {
 .Logo-siman {
     width: 40px;
     height: auto;
-    margin-right: 10px ;
+    margin-right: 10px;
 }
-.Departamentos {
-    display: flex;
-    align-items: center;
+
+nav {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ccc;
     padding: 10px 20px;
-    gap: 10px;
-    background-color: gainsboro;
-    text-decoration: none;
+}
+
+nav ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    gap: 20px;
+    list-style: none;
+}
+
+nav li {
+    cursor: pointer;
+    font-weight: bold;
+    color: #333;
+    transition: color 0.3s;
+}
+
+nav li:hover {
+  color: #c00;
+  text-decoration: underline; 
 }
