--- a/SimanStyle.css
+++ b/SimanStyle.css
@@ -33,7 +33,7 @@ body {
 }
 
 .Logo-siman {
-    width: 40px;
+    width: 35px;
     height: auto;
     margin-right: 10px;
 }
@@ -60,6 +60,179 @@ nav li {
 }
 
 nav li:hover {
-  color: #c00;
-  text-decoration: underline; 
+    color: #c00;
+    text-decoration: underline;
+}
+
+.banner {
+    position: relative;
+    width: 100%;
+}
+
+.banner {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.boton-comprar {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: #492828;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 25px;
+    border-radius: 4px;
+    opacity: 0.9;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.boton-comprar:hover {
+    background-color: #c00;
+    transform: scale(1.05);
+}
+
+/* Logo PNG sobre Banner*/
+.logo-sobre-banner {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: 150px;
+    height: auto;
+    z-index: 2;
+}
+
+.Texto-sobre-banner {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    /* Centrado exacto */
+    color:#c00(253, 176, 113);
+    font-family: 'Star Wars', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: left;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
+    /* Para que el texto resalte */
+    z-index: 2;
+}
+
+main.Productos {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    flex: 1;
+}
+
+.Item img {
+    max-width: 100%;
+    height: 180px;
+    object-fit: contain;
+    margin-bottom: 10px;
+}
+
+.Item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 325px;
+    box-sizing: border-box;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.Item p {
+    font-weight: bold;
+    font-size: 18px;
+    color: #c00;
+}
+
+.Item:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.img-container {
+    position: relative;
+    width: 100%;
+    height: 180px;
+    overflow: hidden;
+}
+
+.img-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.img-hover {
+    opacity: 0;
+}
+
+.img-container:hover .img-hover {
+    opacity: 1;
+}
+
+.img-container:hover .img-principal {
+    opacity: 0;
+}
+
+.contenido-principal{
+display: flex;
+gap: 30px;
+padding:20px ;
+}
+
+/*Panel Lateral*/
+.menu-filtros{
+    width: 220px;
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 8px;
+    font-family: 'Star Wars', sans-serif;
+    position: sticky;
+    top: 20px;
+    height: fit-content;
+    align-self: flex-start;
+}
+
+.menu-filtros h2{
+    font-size: 20px;
+    margin-bottom: 15px;
+    color: #a80404;
+}
+
+.menu-filtros .filtros{
+    margin-bottom: 20px;
+}
+
+/*Boton Aplicar filtro*/
+
+.btn-aplicar {
+    background-color: #a80404;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 100%;
+    transition: background-color 0.3s;
+}
+
+.btn-aplicar :hover {
+    background-color: #c00;
 }
